<resources>
    <string name="app_name">Grandgroc</string>
    <string name="login">Login</string>
    <string name="discover_the_best_and_fresh_grocery_items_from_grandgroc_grocery_app_and_fast_delivery_to_your_doorstep">Discover the best and fresh grocery items from Grandgroc grocery app and fast delivery to your doorstep</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="sign_in_to_grandgroc">Sign in to Grandgroc</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="wait_for_a_moment">  Wait For a Moment.</string>
    <string name="logging">Logging</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Grandgroc</string>
    <string name="nav_header_subtitle">Kozhikode</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="contentDesp">content description</string>


    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_viewOrders">ViewOrders</string>
    <string name="logout">Logout</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="new_order_s_not_available">New-order\'s not Available</string>
    <string name="current_order_s_not_available">Current-order\'s not Available</string>
    <string name="last_page">Last page</string>
    <string name="qr_scanner">qr_scanner</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_geolocate">Pick Place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="pick_place">pick place</string>
    <string name="alert">Alert..</string>
    <string name="do_u_want_to_logout">Do u want to logout ..?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="_720">720</string>
    <string name="payment_method">Payment Method</string>
    <string name="delivery_type">Delivery Type</string>
    <string name="clt_1112">#CLT-1112</string>
    <string name="location">Location</string>
    <string name="cod">COD</string>
    <string name="fresh_broccoli">Fresh Broccoli</string>
    <string name="profilename">ProfileName</string>
    <string name="place_details">Place Details</string>
    <string name="delivery_location">DELIVERY LOCATION</string>
    <string name="address">Address :</string>
    <string name="grand_groc_in">Grand_groc.in</string>
    <string name="meenachirayil_h_arakulam_po">Meenachirayil(H) ,Arakulam Po</string>
    <string name="peedikapally_658655">Peedikapally , 658655</string>
    <string name="calicut">Calicut</string>
    <string name="landmark">Landmark :</string>
    <string name="mobile_no">Mobile No :</string>
    <string name="_9778006586">9778006586</string>
    <string name="pickup_location">PICKUP LOCATION</string>
    <string name="change_status">CHANGE STATUS</string>
    <string name="collected">Collected</string>
    <string name="delivered">Delivered</string>
    <string name="completed">Completed</string>
    <string name="payment_details">PAYMENT DETAILS</string>
    <string name="grandgroc">Grandgroc</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="date">Date</string>
    <string name="code">Code</string>
    <string name="change_password">Change password</string>
    <string name="edit">Edit</string>
    <string name="orders_not_available">Orders not Available</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="old_password">Old password</string>
    <string name="save">Save</string>
    <string name="data_found">Data Found</string>


</resources>