<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user__profile_"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_viewOrder"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_viewOrders" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />

    </group>
</menu>