<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.LocationFragment">

    <ScrollView
        android:id="@+id/svLocation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/rlLMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvHDeliveryLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_delivery_icon"
                android:drawablePadding="10dp"
                android:text="@string/delivery_location"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvHAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvHDeliveryLocation"
                android:layout_marginTop="10dp"
                android:text="@string/address" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvHAddress"
                android:layout_marginTop="5dp"
                android:text="@string/grand_groc_in"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/tvHomeAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvName"
                android:layout_marginTop="3dp"
                android:text="@string/meenachirayil_h_arakulam_po"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/tvLocation1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvHomeAddress"
                android:layout_marginTop="5dp"
                android:text="@string/peedikapally_658655"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/tvDistrict"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvLocation1"
                android:layout_marginTop="5dp"
                android:text="@string/calicut"
                android:textColor="@color/colorBlack" />


            <TextView
                android:id="@+id/tvHLandmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDistrict"
                android:layout_marginTop="15dp"
                android:text="@string/landmark" />

            <TextView
                android:id="@+id/tvLandmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvHLandmark"
                android:layout_marginTop="5dp"
                android:text="@string/calicut"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/tvHPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvLandmark"
                android:layout_marginTop="15dp"
                android:text="@string/mobile_no" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvHPhone"
                android:layout_marginTop="5dp"
                android:text="@string/_9778006586"
                android:textColor="@color/colorBlack" />


            <TextView
                android:id="@+id/tvHPickupLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvPhone"
                android:layout_marginTop="40dp"
                android:text="@string/pickup_location"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />


            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/tvHPickupLocation"
                android:layout_marginTop="10dp"
                tools:context=".ui.activity.OrderDetailsActivity" />


            <TextView
                android:id="@+id/tvHOrderStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/map"
                android:layout_marginTop="40dp"
                android:text="@string/change_status"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvHOrderStatus"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/btnCollected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:fontFamily="@font/muli_semi_bold_italic"
                    android:padding="5dp"
                    android:text="@string/collected"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnDelivered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:padding="5dp"
                    android:text="@string/delivered"
                    android:fontFamily="@font/muli_semi_bold_italic"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnCompleted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/muli_semi_bold_italic"
                    android:background="@color/colorPrimary"
                    android:padding="5dp"
                    android:text="@string/completed"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>
</RelativeLayout>