<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.e.sholinpaul.grandgroc.ui.fragment.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.e.sholinpaul.grandgroc.ui.fragment.UserProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_user_profile" />

    <fragment
        android:id="@+id/nav_viewOrder"
        android:name="com.e.sholinpaul.grandgroc.ui.fragment.AllOrdersFragment"
        android:label="@string/menu_viewOrders"
        tools:layout="@layout/fragment_all_orders" />
</navigation>