<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_720"
        android:drawableStart="@drawable/ic_icon_rupee_sign"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:layout_margin="2dp"
        android:drawablePadding="8dp"/>
    <TextView
        android:id="@+id/paymentMethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_method"
        android:textColor="@color/colorBlack"
        android:layout_below="@id/tvAmount"
        android:textSize="15sp"
        android:padding="5dp"
        android:textStyle="normal"/>
    <TextView
        android:id="@+id/deliveryType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delivery_type"
        android:textColor="@color/colorBlack"
        android:layout_below="@id/paymentMethod"
        android:textSize="15sp"
        android:padding="5dp"
        android:textStyle="normal"/>

</RelativeLayout>