<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="8dp">

        <RelativeLayout
            android:id="@+id/rlMainLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/cardview_light_background">


            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli_bold_italic"
                android:text="@string/sign_in_to_grandgroc"
                android:textColor="@color/colorBlack"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvLoginContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvLogin"
                android:fontFamily="@font/muli_bold_italic"
                android:text="@string/let_s_get_started"
                android:textColor="@color/colorGrey"
                android:textSize="18sp"
                android:textStyle="italic" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvLoginContent"
                android:layout_marginTop="20dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="8dp"
                    android:ems="2"
                    android:fontFamily="@font/muli_bold_italic"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/colorGrey" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilUsername"
                android:layout_margin="2dp"
                app:passwordToggleEnabled="true">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/muli_bold_italic"
                    android:hint="@string/password"
                    android:ems="2"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:textColor="@color/colorGrey" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/roundshapebtn"
                android:fontFamily="@font/muli_bold_italic"
                android:padding="10dp"
                android:text="@string/sign_in"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnSignIn"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:fontFamily="@font/muli_italic"
                android:padding="5dp"
                android:text="@string/forgot_password"
                android:textSize="16sp" />
        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>


