<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.CurrentOrderFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCurrentOrder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:padding="5dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/schListNotFound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="6dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imgSchNull"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/contentDesp"
            android:src="@drawable/emptyface" />

        <TextView
            android:id="@+id/tvSchNull"
            style="@style/tvNotFound"
            android:layout_below="@+id/imgSchNull"
            android:gravity="center_horizontal"
            android:text="@string/current_order_s_not_available"
            android:textAlignment="center" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lLoading"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="2">

        <ProgressBar
            android:id="@+id/loadingProgress"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_marginBottom="10dp"
            android:indeterminateTint="@color/colorGrey"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvWait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/wait_for_a_moment"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />

    </LinearLayout>
</RelativeLayout>