<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="12dp"
    app:cardElevation="12dp">

    <RelativeLayout
        android:id="@+id/rlcCatMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="12dp"
            android:gravity="center_horizontal"
            android:text="@string/change_password"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlOldpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitle"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            app:boxBackgroundMode="none"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edOldpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:gravity="start|center"
                android:hint="@string/old_password"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                android:maxLength="24"
                android:padding="6dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingStart="12dp"
                android:scrollbars="vertical"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:background="@drawable/roundshapebtn"
                android:backgroundTint="@color/colorUltraLightGreen"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlNewpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tlOldpassword"
            android:layout_margin="5dp"
            android:layout_marginTop="6dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edNewpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:gravity="start|center"
                android:hint="@string/new_password"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                android:maxLength="24"
                android:padding="6dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingStart="12dp"
                android:scrollbars="vertical"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:background="@drawable/roundshapebtn"
                android:backgroundTint="@color/colorUltraLightGreen"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlCPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tlNewpassword"
            android:layout_margin="5dp"
            android:layout_marginTop="6dp"
            android:layout_marginStart="8dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edCPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:gravity="start|center"
                android:hint="@string/confirm_password"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                android:maxLength="24"
                android:padding="6dp"
                android:paddingTop="12dp"
                android:paddingStart="12dp"
                android:paddingBottom="12dp"
                android:scrollbars="vertical"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:background="@drawable/roundshapebtn"
                android:backgroundTint="@color/colorUltraLightGreen"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tlCPassword"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:text="" />

        <Button
            android:id="@+id/btnSavePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvError"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/roundshapebtn"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/save"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>