<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:backgroundTint="@color/colorUltraLightGreen"
    app:cardCornerRadius="10dp">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivEmpImg"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:background="@drawable/ic_profile"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="centerCrop"
            app:civ_border_color="@color/colorWhite"
            app:civ_border_overlay="false"
            app:civ_border_width="3dp" />


        <RelativeLayout
            android:id="@+id/rlType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ivEmpImg"
            android:gravity="end">

            <TextView
                android:id="@+id/tvBcgrnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/ic_regular_bg" />

            <TextView
                android:id="@+id/tvOrderType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="3dp"
                android:layout_marginTop="10dp"
                android:rotation="45"
                android:text="REG"
                android:textColor="@color/white"
                android:textSize="8sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvProductId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivEmpImg"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/clt_1112"
            android:textColor="@color/colorLightGreen"
            android:textSize="16sp"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/llLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvProductId"
            android:layout_centerHorizontal="true"
            android:layout_margin="3dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:src="@drawable/ic_location" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/location"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDeliveryType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/llLocation"
            android:layout_centerHorizontal="true"
            android:layout_margin="3dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivDeliveryType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:src="@drawable/ic_coins_icon" />

            <TextView
                android:id="@+id/tvDeliveryType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:gravity="center_horizontal"
                android:text="@string/cod"
                android:textSize="10sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>


</androidx.cardview.widget.CardView>